Refactor: 레디스 캐시 적용